--- a/index.html
+++ b/index.html
@@ -1,36 +1,84 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>드론 위치 시뮬레이션</title>
-  <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=deebd7b13c0a1c79c9efdce887070ba8"></script>
+    <meta charset="utf-8">
+    <title>실시간 위치 공유</title>
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=deebd7b13c0a1c79c9efdce887070ba8"></script>
+    <style>
+        body { margin: 0; padding: 0; font-family: Arial, sans-serif; }
+        #map { width: 100%; height: 100vh; } /* 뷰포트 전체 높이를 사용하도록 설정 */
+        #status {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 10px;
+            border-radius: 5px;
+            z-index: 100;
+        }
+    </style>
 </head>
 <body>
-  <h2>드론 위치 시뮬레이션</h2>
-  <div id="map" style="width:100%;height:400px;"></div>
+    <div id="status">위치 정보를 가져오는 중...</div>
+    <div id="map"></div>
 
-  <script>
-    var lat = 37.5665;  // 서울 위도
-    var lon = 126.9780; // 서울 경도
+    <script>
+        var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+            mapOption = {
+                center: new kakao.maps.LatLng(33.450701, 126.570667), // 초기 지도 중심 (예: 카카오 본사)
+                level: 4 // 지도의 확대 레벨
+            };
 
-    var map = new kakao.maps.Map(document.getElementById('map'), {
-        center: new kakao.maps.LatLng(lat, lon),
-        level: 4
-    });
+        var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+        var marker = new kakao.maps.Marker({ // 마커를 생성합니다
+            position: mapOption.center // 초기 마커 위치
+        });
+        marker.setMap(map); // 마커를 지도에 표시합니다
 
-    var marker = new kakao.maps.Marker({
-        position: new kakao.maps.LatLng(lat, lon),
-        map: map
-    });
+        var statusDiv = document.getElementById('status');
 
-    // 3초마다 위치 이동
-    setInterval(function() {
-        lat += 0.0001;
-        lon += 0.0001;
-        var newPosition = new kakao.maps.LatLng(lat, lon);
-        marker.setPosition(newPosition);
-        map.setCenter(newPosition);
-    }, 3000);
-  </script>
+        // Geolocation API를 사용하여 현재 위치 가져오기
+        if (navigator.geolocation) {
+            statusDiv.innerHTML = "위치 정보 권한을 요청합니다...";
+
+            // watchPosition을 사용하여 실시간으로 위치 변화 감지
+            navigator.geolocation.watchPosition(function(position) {
+                var lat = position.coords.latitude;  // 위도
+                var lon = position.coords.longitude; // 경도
+
+                var locPosition = new kakao.maps.LatLng(lat, lon);
+
+                // 마커의 위치를 현재 위치로 이동
+                marker.setPosition(locPosition);
+                // 지도의 중심을 현재 위치로 이동
+                map.setCenter(locPosition);
+
+                statusDiv.innerHTML = "현재 위치: 위도 " + lat.toFixed(6) + ", 경도 " + lon.toFixed(6);
+
+            }, function(error) {
+                // 위치 가져오기 실패 시 에러 처리
+                switch (error.code) {
+                    case error.PERMISSION_DENIED:
+                        statusDiv.innerHTML = "위치 정보 사용 권한이 거부되었습니다. 권한을 허용해주세요.";
+                        break;
+                    case error.POSITION_UNAVAILABLE:
+                        statusDiv.innerHTML = "위치 정보를 사용할 수 없습니다.";
+                        break;
+                    case error.TIMEOUT:
+                        statusDiv.innerHTML = "위치 정보를 가져오는 시간이 초과되었습니다.";
+                        break;
+                    case error.UNKNOWN_ERROR:
+                        statusDiv.innerHTML = "알 수 없는 오류가 발생했습니다.";
+                        break;
+                }
+            }, {
+                enableHighAccuracy: true, // 높은 정확도 요구
+                maximumAge: 0,            // 캐시된 위치 정보를 사용하지 않음
+                timeout: 5000             // 5초 안에 위치 정보를 가져오지 못하면 타임아웃
+            });
+        } else {
+            statusDiv.innerHTML = "이 브라우저에서는 Geolocation을 지원하지 않습니다.";
+        }
+    </script>
 </body>
 </html>
